--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Minesweeper</title>
-</head>
-<href="./minesweeper.css">
+    <link rel="stylesheet" href="css/minesweeper.css">
+  </head>
 
 <body>
     <h1>Minesweeper</h1>
@@ -17,10 +20,8 @@
 </body>
 
 <table>
-    <tbody class="table">
-
-    </tbody>
-  </table>
+    <tbody class="board"></tbody>
+</table>
   
 <script src="./game.js"></script>
 
